# video_clipper

./: LICENSE  README.md  pyproject.toml  video_clipper.py
.github/workflows/: lint.yml
